--- a/src/pxe-update.in
+++ b/src/pxe-update.in
@@ -396,8 +396,9 @@ for RELEASE in $RELEASES_LIST ; do
   DISTRIB=$(echo "$RELEASE" | cut -d ":" -f 1)
   CODENAME=$(echo "$RELEASE" | cut -d ":" -f 2)
   ARCH=""
+  NETBOOT_AVAILABLE=1
   RELEASE_FILE="/tmp/$DISTRIB-$CODENAME-Release.$$"
-  print_debug_var "SUITE" "DISTRIB" "CODENAME" "RELEASE_FILE"
+  print_debug_var "SUITE" "DISTRIB" "CODENAME" "RELEASE_FILE" "NETBOOT_AVAILABLE"
   print_verbose "##### Processing release: $DISTRIB $CODENAME #####"
 
   # Information gathering
@@ -492,12 +493,22 @@ for RELEASE in $RELEASES_LIST ; do
         fi
       fi
 
+      # Ubuntu discontinued netboot images from 20.04
+      if compare_versions "$VERSION" ge 20.10 ; then
+        NETBOOT_AVAILABLE=0
+        print_debug_var "NETBOOT_AVAILABLE"
+      fi
+
       delete_files "$RELEASE_FILE"
       ;;
 
     mint)
 
       set_distrib_info
+
+      # Mint never released netboot images
+      NETBOOT_AVAILABLE=0
+      print_debug_var "NETBOOT_AVAILABLE"
 
       # Mint "Suite" conversion
       if [ -z "$MINT_STABLE" ] ; then
@@ -631,7 +642,7 @@ for RELEASE in $RELEASES_LIST ; do
       [ -d "$WORK_DIR" ] || mkdir -p "$WORK_DIR"
 
       # Text installer
-      if [ "$DISTRIB" != "mint" ] ; then
+      if [ $NETBOOT_AVAILABLE -eq 1 ] ; then
 
         # Mirror netboot directory
         NETBOOT_DIR="$BASE_URL/$DISTRIB/dists/$CODENAME/main/installer-$ARCH/current/${LEGACY}images/netboot"
@@ -696,7 +707,7 @@ for RELEASE in $RELEASES_LIST ; do
         >> "$CODENAME_MENU_FILE"
 
       # GTK Installer
-      if [ "$DISTRIB" != "mint" ] ; then
+      if [ $NETBOOT_AVAILABLE -eq 1 ] ; then
 
         check_remote_dir "$NETBOOT_DIR/gtk"
         if [ $? -eq 0 ] ; then
@@ -999,8 +1010,8 @@ for RELEASE in $RELEASES_LIST ; do
               "APPEND root=/dev/nfs boot=$BOOT_METHOD netboot=nfs nfsroot=$LIVE_NFS_SERVER_IP:$LIVE_NFS_SERVER_DIR/$DISTRIB/$CODENAME/$ARCH/$DESKTOP $LIVE_LOCALIZATION_OPTIONS $APPEND_OPTIONS --" \
               >> "$CODENAME_LIVE_MENU_FILE"
 
-            # Mint doesn't provide netboot installer, so we have to create and/or copy missing files
-            if [ "$DISTRIB" = "mint" ] ; then
+            # Handle releases without netboot support
+            if [ "$NETBOOT_AVAILABLE" -eq 0 ] ; then
 
               [ ! -d "$WORK_DIR/boot-screens" ] && mkdir -p "$WORK_DIR/boot-screens"
 
