Update Mint quirks

--- a/etc/pxe-update.conf
+++ b/etc/pxe-update.conf
@@ -93,7 +93,7 @@ LIVE_DESKTOP_LIST_UBUNTU="desktop"
 LIVE_DESKTOP_LIST_MINT="cinnamon mate kde xfce"
 
 # Space-separated list of Mint LMDE Live CD variants to use
-LIVE_DESKTOP_LIST_LMDE="cinnamon mate"
+LIVE_DESKTOP_LIST_LMDE="cinnamon"
 
 
 #
